# Controle_estoque_lojas

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: data_etl.ipynb  data_exploration.ipynb
pages/: 01_📊_Dashboard.py  02_📈_Análise_Exploratória.py
tests/: db_connection.py  test_analysis.py
