[project]
name = "controle-lista-estoque"
version = "0.1.0"
description = "Tabela e Graficos de controle de estoque"
authors = [
    {name = "jhonatan.novais"}
]


readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "plotly (>=6.1.2,<7.0.0)"
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
